--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -171,6 +171,14 @@
             android:text="@string/gumbDodaj"
             android:layout_gravity="center"
             android:layout_margin="10dp"/>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bottom_navigation"
+            app:menu="@menu/bottom_nav_menu"/>
+
     </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
