--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -5,8 +5,12 @@
     android:orientation="vertical">
     <ScrollView
         android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_weight="1">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_height="match_parent"
         android:layout_width="match_parent">
-    <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -172,13 +176,13 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"/>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bottom_navigation"
-            app:menu="@menu/bottom_nav_menu"/>
-
     </LinearLayout>
     </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:menu="@menu/bottom_nav_menu"/>
 
 </LinearLayout>
