--- a/app/src/main/res/layout/job_offer.xml
+++ b/app/src/main/res/layout/job_offer.xml
@@ -6,7 +6,6 @@
     android:orientation="vertical"
     android:layout_margin="20dp"
     android:padding="10dp">
-
     <TextView
         android:id="@+id/jobTitle"
         android:layout_width="fill_parent"
@@ -15,7 +14,6 @@
         android:paddingTop="6dip"
         android:textSize="16sp"
         android:textStyle="bold" />
-    <!--
     <TextView
         android:id="@+id/jobPay"
         android:layout_width="fill_parent"
@@ -23,18 +21,52 @@
         android:paddingBottom="2dip"
         android:paddingTop="6dip"
         android:textSize="14sp"/>
-
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dip"/>
+        android:layout_width="match_parent">
+        <TextView
+            android:id="@+id/freeSpace"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"/>
+        <TextView
+            android:id="@+id/duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/mobile"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_height="wrap_content"
-        android:textColor="#5d5d5d"
-        android:textStyle="bold" />
-    -->
+        android:layout_width="match_parent">
+        <TextView
+            android:id="@+id/worktime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"/>
+        <TextView
+            android:id="@+id/start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <Button
+            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="20dp"
+            android:drawableBottom="@drawable/baseline_star_outline_24"
+            android:drawableTint="#ffffff"/>
+        <Button
+            android:text="@string/pokaziVec"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_marginHorizontal="20dp"/>
+    </LinearLayout>
 </LinearLayout>
