--- a/app/src/main/res/layout/job_detail.xml
+++ b/app/src/main/res/layout/job_detail.xml
@@ -1,19 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dip"
+                android:layout_weight="3"
+                android:layout_height="50dp"
+                android:autoSizeTextType="uniform"
+                android:layout_margin="20dp"
+                android:text="@string/PonudbaDel"/>
+        </LinearLayout>
+    <Button
+        android:drawableLeft="@drawable/baseline_arrow_back_24"
+        android:backgroundTint="#00aaaaff"
+        android:id="@+id/back"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"/>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="20dp"
-    android:padding="10dp">
     <TextView
         android:id="@+id/jobTitle"
-        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:paddingTop="6dip"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:layout_width="match_parent"/>
     <TextView
         android:id="@+id/jobPay"
         android:layout_width="fill_parent"
@@ -36,6 +52,11 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/description"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_height="wrap_content"
@@ -50,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
-
+    </LinearLayout>
     <LinearLayout
         android:orientation="horizontal"
         android:layout_height="wrap_content"
