--- a/app/src/main/res/layout/job_offer.xml
+++ b/app/src/main/res/layout/job_offer.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
         <Button
+            android:id="@+id/favourite"
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
