Fixed favourite button in detail Job offer view

--- a/app/src/main/res/layout/job_detail.xml
+++ b/app/src/main/res/layout/job_detail.xml
@@ -81,6 +81,7 @@
             android:drawableBottom="@drawable/baseline_star_outline_24"
             android:drawableTint="#ffffff"
             android:focusable="false"
+            android:id="@+id/favourite"
             />
         <Button
             android:text="@string/prijaviSe"
