--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -1,8 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:radius="20dp"/>
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/darker_gray" />
+    android:shape="rectangle" >
+    <corners android:radius="20dp" />
+    <gradient
+        android:angle="90"
+        android:endColor="?attr/colorSecondary"
+        android:startColor="?attr/colorSecondary"
+        android:type="linear" />
 </shape>
