--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/colorOnPrimary">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -58,6 +59,12 @@
                 android:layout_width="match_parent"
                 android:id="@+id/seznamDel"
                 android:orientation="vertical"/>
+
+            <ProgressBar
+                android:id="@+id/loadingIndicatorJobs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"/>
 
         </LinearLayout>
         <LinearLayout
