--- a/app/src/main/res/layout/job_detail.xml
+++ b/app/src/main/res/layout/job_detail.xml
@@ -2,7 +2,8 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?attr/colorOnPrimary">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -19,78 +20,93 @@
                 android:layout_margin="20dp"
                 android:text="@string/PonudbaDel"/>
         </LinearLayout>
-    <TextView
-        android:id="@+id/jobTitle"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
-    <ImageView
-        android:src="@drawable/baseline_arrow_back_24"
-        android:id="@+id/back"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-    <TextView
-        android:id="@+id/jobPay"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:paddingTop="6dip"
-        android:textSize="14sp"/>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:id="@+id/freeSpace"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"/>
-        <TextView
-            android:id="@+id/duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:id="@+id/worktime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"/>
-        <TextView
-            android:id="@+id/start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-        <TextView
-            android:id="@+id/description"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"/>
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <Button
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        <ImageView
+            android:src="@drawable/baseline_arrow_back_24"
+            android:id="@+id/back"
             android:layout_marginHorizontal="20dp"
-            android:drawableBottom="@drawable/baseline_star_outline_24"
-            android:drawableTint="#ffffff"
-            android:focusable="false"
-            android:id="@+id/favourite"
-            />
-        <Button
-            android:text="@string/prijaviSe"
             android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:layout_marginHorizontal="20dp"
-            android:focusable="false"
-            />
+            android:layout_width="wrap_content"
+            app:tint="?attr/colorOnSecondary" />
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:background="@drawable/card_background"
+            android:layout_margin="20dp"
+            android:padding="20dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+            <TextView
+                android:id="@+id/jobTitle"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"/>
+            <TextView
+                android:id="@+id/jobPay"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dip"
+                android:paddingTop="6dip"
+                android:textSize="14sp"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <TextView
+                    android:id="@+id/freeSpace"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"/>
+                <TextView
+                    android:id="@+id/duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <TextView
+                    android:id="@+id/worktime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"/>
+                <TextView
+                    android:id="@+id/start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+                <TextView
+                    android:layout_marginVertical="20dp"
+                    android:id="@+id/description"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <Button
+                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginHorizontal="20dp"
+                    android:drawableBottom="@drawable/baseline_star_outline_24"
+                    android:drawableTint="#ffffff"
+                    android:focusable="false"
+                    android:id="@+id/favourite"
+                    />
+                <Button
+                    android:text="@string/prijaviSe"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_marginHorizontal="20dp"
+                    android:focusable="false"
+                    />
+            </LinearLayout>
+            </LinearLayout>
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
