Clickable list items in "Ponudba del" and back button functionality for job detail view

--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -25,7 +25,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="20dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/baseline_filter_list_24"/>
+            android:src="@drawable/baseline_filter_list_24"
+            android:tint="?attr/colorOnSecondary"/>
     </LinearLayout>
     <ProgressBar
         android:id="@+id/loadingIndicator"
