--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -18,7 +18,7 @@
             android:layout_height="50dp"
             android:autoSizeTextType="uniform"
             android:layout_margin="20dp"
-            android:text="@string/PonudbaDel"/>
+            android:text="@string/ponudbaDel"/>
         <ImageView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_marginRight="20dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/baseline_filter_list_24"
-            android:tint="?attr/colorOnSecondary"/>
+            app:tint="?attr/colorOnSecondary" />
     </LinearLayout>
     <ProgressBar
         android:id="@+id/loadingIndicator"
