--- a/app/src/main/res/layout/job_detail.xml
+++ b/app/src/main/res/layout/job_detail.xml
@@ -18,7 +18,7 @@
                 android:layout_height="50dp"
                 android:autoSizeTextType="uniform"
                 android:layout_margin="20dp"
-                android:text="@string/PonudbaDel"/>
+                android:text="@string/ponudbaDel"/>
         </LinearLayout>
         <ImageView
             android:src="@drawable/baseline_arrow_back_24"
