--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,19 @@
             <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:id="@+id/imeUporabnika"/>
+                android:id="@+id/imeUporabnika"
+                android:layout_marginHorizontal="20dp"/>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/emailUporabnika"
+                android:layout_marginHorizontal="20dp"/>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:id="@+id/izobrazbaUporabnika"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="20dp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
