removed scrollbar on "Ponudba del"

--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -42,6 +42,7 @@
         android:divider="@null"
         android:dividerHeight="20dp"
         android:listSelector="@android:color/transparent"
+        android:scrollbarSize="0dp"
         >
     </ListView>
     </LinearLayout>
